Task 2 - Exploring the data structure. Instruccion added.

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
        "  'proline']}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
        "dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names'])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        "        5.600e+02]], shape=(178, 13))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
        "(178, 13)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
        "       2, 2])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
        "(178,)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
        "array(['class_0', 'class_1', 'class_2'], dtype='<U7')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
        " 'proline']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,12 +648,13 @@
    "metadata": {},
    "source": [
     "### Loading Iris dataset\n",
-    "https://scikit-learn.org/stable/modules/generated/sklearn.datasets.load_iris.html"
+    "The dataset is available in the sklearn library.\n",
+    "Resource: https://scikit-learn.org/stable/modules/generated/sklearn.datasets.load_iris.html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +838,7 @@
        " 'data_module': 'sklearn.datasets.data'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,8 +849,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function load_iris() returns a bunch of data saved in the file, that returns a dictionaty, with information of: the array, the target, the target names, and features names, the file name, and the data module. \n",
+    "\n",
+    "To get a clearer view of the \"categories\" of the stored information, we can look at only the keys of the dataset. This will return the keys of the dictionary."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +868,7 @@
        "dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names', 'filename', 'data_module'])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,8 +879,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 2: Explore the Data Structure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instruction: \n",
+    "Print and explain the shape of the Iris data set: \n",
+    "- The first and last 5 rows of the data\n",
+    "- The feature names, \n",
+    "- The target classes."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1056,7 @@
        "       [5.9, 3. , 5.1, 1.8]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,121 +1064,6 @@
    "source": [
     "# The so-called features. \n",
     "data ['data']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(150, 4)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Shape.\n",
-    "data ['data'].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# The target\n",
-    "data ['target']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# The target names. \n",
-    "data['target_names']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['sepal length (cm)',\n",
-       " 'sepal width (cm)',\n",
-       " 'petal length (cm)',\n",
-       " 'petal width (cm)']"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# The feature names.\n",
-    "data ['feature_names']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# The feature names.\n",
-    "data ['feature_names']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The load_iris() returns a Bunch object, that's similar to a dictionary, with the following attributes: \n",
-    "- Data: Contains the sepal lengh, width, petal lenghtand with of 150 iris flowers.\n",
-    "- Shape: Contains the number of the columns and rows in the row data. The instances and the Features.\n",
-    "- Target: This attribute are the classes, represents the species of the iris flowers, in this case representated by 0, 1 and 2. \n",
-    "- Target_names: The name of the species: setosa, versicolor, virginica. \n",
-    "- Feature_names: Names of the four features names: sepal lenght and with, petal lenght and with "
    ]
   },
   {
