Task 2 - printing data shape and explaining what it is.

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -898,6 +898,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(150, 4)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Print the shape of the dataset.\n",
+    "data ['data'].shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The \"data shape\" display that this Iris data set contains 150 rows, that means the sample of Iris flowers. \n",
+    "And 4 columns that are the caracteristics."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 90,
    "metadata": {},
    "outputs": [
