--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
        "  'proline']}"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
        "dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names'])"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        "        5.600e+02]], shape=(178, 13))"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
        "(178, 13)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
        "       2, 2])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
        "(178,)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
        "array(['class_0', 'class_1', 'class_2'], dtype='<U7')"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
        " 'proline']"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
        " 'data_module': 'sklearn.datasets.data'}"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
        "dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names', 'filename', 'data_module'])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
        "(150, 4)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,8 +926,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To know what are these 4 caracteristics we can display them, in the following way:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sepal length (cm)',\n",
+       " 'sepal width (cm)',\n",
+       " 'petal length (cm)',\n",
+       " 'petal width (cm)']"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Print the feature names.\n",
+    "data ['feature_names']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The four feature names, are independent variables, which are characteristics measured in centimeters, related to the sepals and petals of each species.\n",
+    "Source: https://www.geeksforgeeks.org/iris-dataset/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1124,7 @@
        "       [5.9, 3. , 5.1, 1.8]])"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
