--- a/iris-dataset-tasks.ipynb
+++ b/iris-dataset-tasks.ipynb
@@ -42,7 +42,7 @@
     "import sklearn as skl \n",
     "\n",
     "# Load the dataset\n",
-    "data = skl.datasets.load_iris()"
+    "iris_data = skl.datasets.load_iris()"
    ]
   },
   {
@@ -228,7 +228,7 @@
    ],
    "source": [
     "# Shows the data\n",
-    "data"
+    "iris_data"
    ]
   },
   {
@@ -258,7 +258,7 @@
    ],
    "source": [
     "# The data keys. \n",
-    "data.keys()"
+    "iris_data.keys()"
    ]
   },
   {
@@ -297,7 +297,7 @@
    ],
    "source": [
     "# Print the shape of the dataset.\n",
-    "data ['data'].shape"
+    "iris_data['data'].shape"
    ]
   },
   {
@@ -336,7 +336,7 @@
    ],
    "source": [
     "# Print the feature names.\n",
-    "data ['feature_names']"
+    "iris_data['feature_names']"
    ]
   },
   {
@@ -371,7 +371,7 @@
    ],
    "source": [
     "# Print the target classes. \n",
-    "data ['target']"
+    "iris_data['target']"
    ]
   },
   {
@@ -400,7 +400,7 @@
    ],
    "source": [
     "# Print the target names. \n",
-    "data['target_names']"
+    "iris_data['target_names']"
    ]
   },
   {
@@ -570,7 +570,7 @@
    ],
    "source": [
     "# The so-called features. \n",
-    "data ['data']"
+    "iris_data['data']"
    ]
   },
   {
@@ -617,11 +617,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>sepal_length</th>\n",
-       "      <th>sepal_width</th>\n",
-       "      <th>petal_length</th>\n",
-       "      <th>petal_width</th>\n",
-       "      <th>species</th>\n",
+       "      <th>sepal length (cm)</th>\n",
+       "      <th>sepal width (cm)</th>\n",
+       "      <th>petal length (cm)</th>\n",
+       "      <th>petal width (cm)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -631,7 +630,6 @@
        "      <td>3.5</td>\n",
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -639,7 +637,6 @@
        "      <td>3.0</td>\n",
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -647,7 +644,6 @@
        "      <td>3.2</td>\n",
        "      <td>1.3</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -655,7 +651,6 @@
        "      <td>3.1</td>\n",
        "      <td>1.5</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -663,19 +658,18 @@
        "      <td>3.6</td>\n",
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>setosa</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   sepal_length  sepal_width  petal_length  petal_width species\n",
-       "0           5.1          3.5           1.4          0.2  setosa\n",
-       "1           4.9          3.0           1.4          0.2  setosa\n",
-       "2           4.7          3.2           1.3          0.2  setosa\n",
-       "3           4.6          3.1           1.5          0.2  setosa\n",
-       "4           5.0          3.6           1.4          0.2  setosa"
+       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+       "0                5.1               3.5                1.4               0.2\n",
+       "1                4.9               3.0                1.4               0.2\n",
+       "2                4.7               3.2                1.3               0.2\n",
+       "3                4.6               3.1                1.5               0.2\n",
+       "4                5.0               3.6                1.4               0.2"
       ]
      },
      "execution_count": 10,
@@ -685,7 +679,7 @@
    ],
    "source": [
     "# To get the first 5 rows of the DataFrame\n",
-    "df = pd.read_csv('https://gist.githubusercontent.com/curran/a08a1080b88344b0c8a7/raw/0e7a9b0a5d22642a06d3d5b9bcbad9890c8ee534/iris.csv')\n",
+    "df = pd.DataFrame(data=iris_data.data, columns=iris_data.feature_names)\n",
     "df.head(5)"
    ]
   },
@@ -707,27 +701,143 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Explanation of the task"
+    "For each feature in the dataset, calculate and display:\n",
+    "- mean\n",
+    "- minimum\n",
+    "- maximum\n",
+    "- standard deviation\n",
+    "- median (also known as 50%)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To display and calculate the features above requested, we can use the `describe` function "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal length (cm)</th>\n",
+       "      <th>sepal width (cm)</th>\n",
+       "      <th>petal length (cm)</th>\n",
+       "      <th>petal width (cm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>150.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>5.843333</td>\n",
+       "      <td>3.057333</td>\n",
+       "      <td>3.758000</td>\n",
+       "      <td>1.199333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.828066</td>\n",
+       "      <td>0.435866</td>\n",
+       "      <td>1.765298</td>\n",
+       "      <td>0.762238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>4.300000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5.100000</td>\n",
+       "      <td>2.800000</td>\n",
+       "      <td>1.600000</td>\n",
+       "      <td>0.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>5.800000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.350000</td>\n",
+       "      <td>1.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.400000</td>\n",
+       "      <td>3.300000</td>\n",
+       "      <td>5.100000</td>\n",
+       "      <td>1.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>7.900000</td>\n",
+       "      <td>4.400000</td>\n",
+       "      <td>6.900000</td>\n",
+       "      <td>2.500000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "<function ndarray.mean>"
+       "       sepal length (cm)  sepal width (cm)  petal length (cm)  \\\n",
+       "count         150.000000        150.000000         150.000000   \n",
+       "mean            5.843333          3.057333           3.758000   \n",
+       "std             0.828066          0.435866           1.765298   \n",
+       "min             4.300000          2.000000           1.000000   \n",
+       "25%             5.100000          2.800000           1.600000   \n",
+       "50%             5.800000          3.000000           4.350000   \n",
+       "75%             6.400000          3.300000           5.100000   \n",
+       "max             7.900000          4.400000           6.900000   \n",
+       "\n",
+       "       petal width (cm)  \n",
+       "count        150.000000  \n",
+       "mean           1.199333  \n",
+       "std            0.762238  \n",
+       "min            0.100000  \n",
+       "25%            0.300000  \n",
+       "50%            1.300000  \n",
+       "75%            1.800000  \n",
+       "max            2.500000  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data ['data'].mean"
+    "df.describe()"
    ]
   },
   {
