Task 6 - import numpy to add a regression line to a scatter.

--- a/iris-dataset-tasks.ipynb
+++ b/iris-dataset-tasks.ipynb
@@ -1141,6 +1141,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Task 6: Analyze Relationship"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instruction: Use numpy.polyfit to add a regression line to the scatter plot from Task 5."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First step to add a regression line is to import numpy.\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## End"
    ]
   }
