task 7 - boxplot creation and style.

--- a/iris-dataset-tasks.ipynb
+++ b/iris-dataset-tasks.ipynb
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1237,7 +1237,16 @@
     "# List of three Series objects one for each species’ petal lengths.\n",
     "#https://www.w3schools.com/python/python_lists_comprehension.asp\n",
     "iris_data_boxplot = [df[df['species'] == sp_name]['petal length (cm)'] for sp_name in species]\n",
-    "\n"
+    "\n",
+    "# Boxplot and style\n",
+    "plt.boxplot(iris_data_boxplot, labels=species)\n",
+    "plt.grid(axis='y')\n",
+    "\n",
+    "# labels y title\n",
+    "plt.xlabel('Species')\n",
+    "plt.ylabel('Petal length (cm)')\n",
+    "plt.title('Boxplot of Petal Lengths')\n",
+    "plt.show()"
    ]
   },
   {
