Task 8 - importing seaborn

--- a/iris-dataset-tasks.ipynb
+++ b/iris-dataset-tasks.ipynb
@@ -1286,24 +1286,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                   sepal length (cm)  sepal width (cm)  petal length (cm)  \\\n",
-      "sepal length (cm)           1.000000         -0.117570           0.871754   \n",
-      "sepal width (cm)           -0.117570          1.000000          -0.428440   \n",
-      "petal length (cm)           0.871754         -0.428440           1.000000   \n",
-      "petal width (cm)            0.817941         -0.366126           0.962865   \n",
-      "\n",
-      "                   petal width (cm)  \n",
-      "sepal length (cm)          0.817941  \n",
-      "sepal width (cm)          -0.366126  \n",
-      "petal length (cm)          0.962865  \n",
-      "petal width (cm)           1.000000  \n",
       "                   sepal length (cm)  sepal width (cm)  petal length (cm)  \\\n",
       "sepal length (cm)           1.000000         -0.117570           0.871754   \n",
       "sepal width (cm)           -0.117570          1.000000          -0.428440   \n",
@@ -1325,10 +1314,28 @@
     "# We can use numeric_only=True parameter to avoid errors if the DataFrame has non-numeric columns\n",
     "# Resource: https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.corr.html\n",
     "correlation_matrix = df.corr(numeric_only=True)\n",
-    "print(correlation_matrix)\n",
     "\n",
     "# Display the correlation matrix\n",
     "print(correlation_matrix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To visualize the data in a heatmap, where each field has the color that corresponds to its value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To display the heatmap we can use seaborn.\n",
+    "# Import seaborn. https://seaborn.pydata.org/generated/seaborn.heatmap.html\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
