Task 9 - calculate the coefficient of determination R2 for two features.

--- a/iris-dataset-tasks.ipynb
+++ b/iris-dataset-tasks.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        " 'data_module': 'sklearn.datasets.data'}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names', 'filename', 'data_module'])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "(150, 4)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        " 'petal width (cm)']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
        "       [5.9, 3. , 5.1, 1.8]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
        "4  setosa  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
        "149  virginica  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +975,7 @@
        "max            2.500000  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1176,10 +1176,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7a1ee96396a0>]"
+       "[<matplotlib.lines.Line2D at 0x7a1ee9257c50>]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1366,6 +1366,80 @@
     "sns.heatmap(correlation_matrix, annot=True, cmap='crest', fmt=\".2f\")\n",
     "plt.title(\"Heatmap Correlation Matrix\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 9: Fit a Simple Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instruction:\n",
+    "- For the two features in Task 5, calculate the coefficient of determination R2.\n",
+    "- Recreate the plot from Task 6 and annotate it with the R2 value. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "R2 measures how well the regression line fits the data.\n",
+    "Values range from:\n",
+    "- 1.0 = perfect prediction\n",
+    "- 0.0 = no predictive power (model predicts the mean)\n",
+    "- < 0 = worse than predicting the mean (bad fit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can export the linear regression, to train a linear regression model\n",
+    "# Resource: https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import r2_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R^2 (Coefficient of Determination): 0.7600\n"
+     ]
+    }
+   ],
+   "source": [
+    "# reshape(-1, 1) converts x to a column matrix, for sklearn.\n",
+    "x = df['sepal length (cm)'].values.reshape(-1, 1) \n",
+    "y = df['petal length (cm)'].values\n",
+    "\n",
+    "# Linear Regression\n",
+    "# fit(x, y) trains the model on the data.\n",
+    "# predict(x) generates predictions for y using the trained model.\n",
+    "model = LinearRegression()\n",
+    "model.fit(x, y)\n",
+    "\n",
+    "# Predict y from x\n",
+    "y_pred = model.predict(x)\n",
+    "\n",
+    "# Calculate R^2\n",
+    "# Resource: https://scikit-learn.org/stable/modules/generated/sklearn.metrics.r2_score.html\n",
+    "# r2_score compares actual (y) values ​​with predicted (y_pred) values.\n",
+    "# R2 measures how well the model explains the variability in the data.\n",
+    "r2 = r2_score(y, y_pred)\n",
+    "print(f\"R^2 (Coefficient of Determination): {r2:.4f}\")"
    ]
   },
   {
