Task 10 - what's a pairplot

--- a/iris-dataset-tasks.ipynb
+++ b/iris-dataset-tasks.ipynb
@@ -1508,7 +1508,28 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Task 10: Too Many Features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instruction: \n",
+    "- Use seaborn to create a pairplot of the data set.\n",
+    "- Explain, in your own words, what the pairplot depicts."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A pairplot is used for visualizing relationships between multiple variables in a dataset. Creating a grid of scatter plots to understand the correlations and trends in data. \n",
+    "Resource: \n",
+    "- https://www.geeksforgeeks.org/python-seaborn-pairplot-method/\n",
+    "- https://seaborn.pydata.org/generated/seaborn.pairplot.html"
+   ]
   },
   {
    "cell_type": "markdown",
